--- a/css/index.css
+++ b/css/index.css
@@ -92,7 +92,15 @@ input{
     font-size: 22px;
     font-family: "Roboto Condensed", sans-serif;
     display: inline-flex;
-    margin-top:32px;
+    margin-top:28px;
+}
+.logo img{
+    width: 40px;
+    height: 40px;
+}
+.logo .uppercase{
+    margin-top: 5px;
+    margin-left: 10px;
 }
 .tel{
     font-size: 22px;
